--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,19 @@
 body {
   margin: 0;
 }
+
+#main {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #e9ebee;
+}
+
+#main h1 {
+  margin: 0;
+}
+
+#signup-form {
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
+}
