improve error rendering

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,11 @@ body {
   margin: 0;
 }
 
+#main ul {
+  list-style: none;
+  margin: 20px auto;
+}
+
 #signup-form {
   display: flex;
   flex-direction: column;
