add left pane on login screen

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@ body {
 
 #main {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   background-color: #e9ebee;
 }
 
@@ -77,4 +77,33 @@ body {
 
 .fa-search {
   color: #4b4f56;
+}
+
+#main-front-left {
+  width: 500px;
+  margin: 40px;
+  color: #333;
+}
+
+#main-front-left h1 {
+  width: 460px;
+  font-size: 26px;
+}
+
+#main-front-left div {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  margin: 40px 0;
+}
+
+#main-front-left h3 {
+  font-weight: 300;
+  margin-left: 20px;
+}
+
+#main-front-left i {
+  font-size: 50px;
+  margin-right: 10px;
+  color: #acbad4;
 }
