add form for uploading pictures

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,10 +125,11 @@ body {
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 810px;
 }
 
 .close {
+  float: right;
   height: 22px;
   background-color: #4267b2;
   color: white;
