--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,8 +125,11 @@ body {
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 600px;
+  width: 70%;
+  min-width: 600px;
   min-height: 300px;
+  border: 2px solid #4267b2;
+  border-radius: 2px;
 }
 
 .close {
