--- a/app/assets/stylesheets/api/friends.scss
+++ b/app/assets/stylesheets/api/friends.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Api/Friends controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#friend-requests {
+  position: absolute;
+  top: 36px;
+  right: -70px;
+  width: 433px;
+}
