add name to profile page

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -256,3 +256,13 @@
   border: 1px solid #cdcdcd;
   height: 20px;
 }
+
+#user-name {
+  color: #ffffff;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 30px;
+  position: absolute;
+  bottom: 10px;
+  left: 200px;
+}
