--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Api/Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#timeline-intro {
+
+}
+
+#timeline-intro ul {
+  list-style: none;
+}
+
+#wall-posts {
+
+}
