Add scroll to top fuction

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,10 @@ body {
   height: 42px;
 }
 
+#header-left-logged-in a {
+  text-decoration: none;
+}
+
 #logo {
   background-color: white;
   color: #3b5998;
