fix scroll to top issue

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -35,6 +35,7 @@
   box-shadow: 0 0 6px rgba(0, 0, 0, .6);
   font-size: 12px;
   padding: 5px 10px;
+  cursor: pointer;
 }
 
 #add-cover-button {
@@ -49,6 +50,7 @@
   box-shadow: 0 0 6px rgba(0, 0, 0, .6);
   font-size: 12px;
   padding: 5px 10px;
+  cursor: pointer;
 }
 
 #cover-photo i {
