--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,10 @@ button:focus {
   outline: none;
 }
 
+img {
+  object-fit: cover;
+}
+
 #main {
   display: flex;
   justify-content: space-around;
