centers profile page

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -7,7 +7,7 @@
   grid-template-columns: 1fr 1fr;
   width: 849px;
   min-height: 350px;
-  margin: 15px 40px;
+  margin: 15px auto;
 }
 
 #timeline-intro {
