--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -3,5 +3,26 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .comments {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.comment-item {
+  background-color: #f2f3f5;
+  display: flex;
+}
+
+.comment-item p {
+  background-color: #ffffff;
+  margin: 10px 20px 10px 0;
+  padding: 0 10px;
+  min-height: 32px;
+  border-radius: 32px;
+}
+
+#comment-item-pic {
+  margin: 10px;
+  width: 32px;
+  height: 32px;
 }
