--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -19,6 +19,15 @@
   padding: 0 10px;
   min-height: 32px;
   border-radius: 32px;
+  font-size: 14px;
+}
+
+.comment-item a {
+  margin-right: 5px;
+  text-decoration: none;
+  color: #385a99;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 #comment-item-pic {
