fix issue rendering long comments

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -18,8 +18,10 @@
   margin: 10px 20px 10px 0;
   padding: 0 10px;
   min-height: 32px;
+  max-width: 400px;
   border-radius: 32px;
   font-size: 14px;
+  overflow-wrap: break-word;
 }
 
 .comment-item a {
