center comment in buble

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -16,8 +16,7 @@
 .comment-item p {
   background-color: #ffffff;
   margin: 10px 20px 10px 0;
-  padding: 0 10px;
-  min-height: 32px;
+  padding: 8px 10px;
   max-width: 400px;
   border-radius: 32px;
   font-size: 14px;
