change modal form color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -154,7 +154,7 @@ img {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #e9ebee;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
