change modal border

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,7 +160,7 @@ img {
   border: 1px solid #888;
   width: 600px;
   min-height: 300px;
-  border: 2px solid #4267b2;
+  border: 1px solid #00030d;
   border-radius: 2px;
 }
 
