--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -121,10 +121,11 @@
 }
 
 .post-index {
-  min-height: 350px;
+  max-height: 100vh;
   width: 510px;
   background-color: #ffffff;
   border: 1px solid #dddfe2;
+  overflow: scroll;
 }
 
 .post {
