--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -12,7 +12,7 @@
 
 #timeline-intro {
   width: 325px;
-  height: 400px;
+  height: 262px;
   background-color: #ffffff;
   border: 1px solid #dddfe2;
   border-radius: 2px;
@@ -47,6 +47,8 @@
   list-style: none;
   margin: 6px 12px;;
   padding: 0;
+  height: 200px;
+  overflow: auto;
 }
 
 #timeline-intro li {
