canter all spinners to center of component

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -381,3 +381,9 @@ footer i {
 #news-api-credit a {
   margin-left: 5px;
 }
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
