--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -290,7 +290,7 @@ footer i {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 210px;
+  height: 350px;
   margin-right: 10px;
 }
 
@@ -310,6 +310,7 @@ footer i {
 #my-links a:hover {
   background-color: #f6f7f9;
   border-color: #dddfe3;
+  font-weight: bold;
 }
 
 #my-links i {
