reformats link to add profile

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -57,6 +57,17 @@
   font-size: 12px;
 }
 
+#timeline-link {
+  margin: 12px;
+  padding: 12px;
+}
+
+#timeline-link a {
+  text-decoration: none;
+  color: #4080ff;
+  font-weight: bold;
+}
+
 .post-form {
   width: 510px;
   height: 150px;
