limit size of preview

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -162,6 +162,11 @@ img {
   border-radius: 2px;
 }
 
+.modal-content img {
+  height: 100%;
+  width: 100%;
+}
+
 .close {
   float: right;
   height: 22px;
